[project]
name = "comfyui_videogrid"
version = "0.0.3"
description = "Add vertical and horizontal video grid support"
license = {text = "GNU General Public License v3"}
dependencies = []

[project.urls]
Repository = "https://github.com/stevenwg/ComfyUI-VideoGrid"

[tool.comfy]
PublisherId = "stevenwg"
DisplayName = "ComfyUI-VideoGrid"
Icon = ""